fix header dropdown and search alignment

--- a/www/less/header.less
+++ b/www/less/header.less
@@ -69,8 +69,8 @@
 				font-weight: @font-weight-light;
 				font-size: @font-size-base;
 				color: @khan-black2;
-				line-height: 19px;
-				margin-top: 30px;
+				line-height: 16px;
+				margin-top: 33px;
 				display: block;
 				padding-left: 30px;
 				margin-right: 30px;
